[package]
name = "version_operators"
version = "0.0.1"
authors = ["S0AndS0 <strangerthanbland@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
description = "Rust library for comparing and manipulating version numbers"
homepage = "https://github.com/rust-utilities/version_operators"
readme = ".github/README.md"
repository = "https://github.com/rust-utilities/version_operators"
keywords = ["version", "operators", "comparison"]
categories = ["config", "data-structures"]

exclude = [ "*" ]

include = [
  "**/*.rs",
  "Cargo.toml",
  ".github/README.md",
  "LICENSE",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

